Added profile pic

--- a/LANParty/LANParty.Windows/LANParty.Windows.csproj
+++ b/LANParty/LANParty.Windows/LANParty.Windows.csproj
@@ -106,6 +106,9 @@
     <Compile Include="Pages\CreateParty.xaml.cs">
       <DependentUpon>CreateParty.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\EditProfile.xaml.cs">
+      <DependentUpon>EditProfile.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -125,6 +128,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\DefaultProfilePic.jpg" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
@@ -132,6 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Pages\CreateParty.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\EditProfile.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
