--- a/LANParty/LANParty.Windows/LANParty.Windows.csproj
+++ b/LANParty/LANParty.Windows/LANParty.Windows.csproj
@@ -103,6 +103,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Pages\ChooseCategoryPage.xaml.cs">
+      <DependentUpon>ChooseCategoryPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\CreatedPartiesPage.xaml.cs">
       <DependentUpon>CreatedPartiesPage.xaml</DependentUpon>
     </Compile>
@@ -150,6 +153,10 @@
     <Content Include="Assets\StoreLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Pages\ChooseCategoryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\CreatedPartiesPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
