Moved data templates to resource dictionary

--- a/LANParty/LANParty.Windows/LANParty.Windows.csproj
+++ b/LANParty/LANParty.Windows/LANParty.Windows.csproj
@@ -168,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\DefaultProfilePic.jpg" />
+    <Content Include="Assets\lanparty.png" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
