--- a/LANParty/LANParty.Windows/LANParty.Windows.csproj
+++ b/LANParty/LANParty.Windows/LANParty.Windows.csproj
@@ -255,6 +255,9 @@
     <Reference Include="Parse.WinRT">
       <HintPath>..\..\packages\parse.1.3.1\lib\netcore45\Parse.WinRT.dll</HintPath>
     </Reference>
+    <Reference Include="WriteableBitmapEx.WinRT">
+      <HintPath>..\..\..\..\..\Desktop\WriteableBitmapEx_v1.0.14.0\WriteableBitmapEx_v1.0.14.0\WinRT\WriteableBitmapEx.WinRT.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
